# SATA_Attention_expansion_experiment

./: README.md  pyproject.toml  setup.py
sata/: __init__.py  attention.py  conventional.py  feature_map.py  indexing.py  taylor_term.py
src/sata/: __init__.py  attention.py  conventional.py  taylor_term.py
