[project]
name = "sata-attention"
version = "0.1.0"
description = "Self-attention at constant cost per token via symmetry-aware Taylor approximation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "optree>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sata"]
